	    + Make sure that the 'super_admin' value isn't overwritten in tables/user_details-access.inc.
	      If there are _more_ than one root/suffix in the database and the user is super admin in
	      the first, but not in the second, then the value was overwritten...
	    + Don't show the option (in domain details->default) for Mailinglist administrators
	      if useEzmlm isn't true.

	GUI layout changes
	  - RDN and FQDN should not be shown in if we're viewing the 'Global' 
	    QmailLDAP/Control frame.
	  - Bug fix merges from BRANCH_HOST_MERGE:
	    + Don't show the DN in Mailserver header. Use the FQDN instead.
	    + Don't show a blue background if left-head.html isn't called from
	      left*.php
	    + Verbose about loading the include/defaults.inc file (if .DEBUG_ME
	      exists) in include/pql_config.inc.
	    + Cleanup the HTML in include/pql_formating.inc:pql_generate_button().
	      Buttons is yet again left justified (I'm not sure if the 'center'
	      justification was on purpose or not, but I didn't like it).
	      - Same fix for pql_format_status_msg(). Message was center justified,
		and it wasn't very pretty.
	    + Fix calculation on how many '&nbsp;'s to output in
	      include/pql_formating.inc:pql_format_tree_span(). It's now more aligned
	      with line(s) above.

	Schema changes
	API changes
	Misc changes
	  - Add support for searching for DNS hostname/ip address in search page.
	  - Extra debugging in include/pql_search.inc:pql_search() regarding cache.
	  - Merge from BRANCH_HOST_MERGE: Support for the mailSizeMax attribute.

phpQLAdmin 2.3.4 Release (Oct 20 2006)
	Bug fixes
	  - Retreiving ALL operational attributes with '+' is an OpenLDAP thing ONLY.
	    On all other (?), one must specify the attributes in question directly.
	  - Instead of doing urldecode() all over the place and to normalize the DN
	    (of users and domains etc), create a pql_format_normalize_dn() function